// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenu should be rendered correctly 1`] = `
<nav
  className="root uui-main_menu uui-mainmenu-container container"
>
  <div
    className="itemsContainer mainWrapper"
  >
    <div
      className="uui-flex-row container align-items-center"
      style={
        {
          "columnGap": undefined,
          "rowGap": undefined,
        }
      }
    >
      <div
        className="root uui-burger uui-burger-menu container"
      >
        <button
          className="uui-burger-button"
          onClick={[Function]}
        >
          <div
            className="container uui-icon uui-enabled"
            style={{}}
          >
            <svg
              className=""
            />
          </div>
        </button>
      </div>
      <span
        className="uui-button-box uui-enabled root type-primary"
        role="menuitem"
        tabIndex={-1}
      />
    </div>
  </div>
</nav>
`;

exports[`MainMenu should be rendered correctly 2`] = `
<nav
  className="root uui-main_menu uui-mainmenu-container container uui-mainmenu-transparent"
>
  <div
    className="itemsContainer mainWrapper"
  >
    <div
      className="uui-flex-row container align-items-center"
      style={
        {
          "columnGap": undefined,
          "rowGap": undefined,
        }
      }
    >
      <div
        className="root uui-burger uui-burger-menu container"
      >
        <button
          className="uui-burger-button"
          onClick={[Function]}
        >
          <div
            className="container uui-icon uui-enabled"
            style={{}}
          >
            <svg
              className=""
            />
          </div>
        </button>
      </div>
      <span
        className="uui-button-box uui-enabled root type-primary"
        role="menuitem"
        tabIndex={-1}
      />
    </div>
  </div>
  <div
    className="uui-mainmenu-server-badge"
  >
    <div
      className="uui-mainmenu-server-badge-label"
      style={
        {
          "background": "#39b7ac",
        }
      }
    >
      Dev
    </div>
  </div>
</nav>
`;
